--- a/src/routes/home.css
+++ b/src/routes/home.css
@@ -12,7 +12,6 @@
   justify-content:space-between;
   margin-top:2vh;
 }
-
 .kanban-column{
   width:21%;
   background-color:grey;
@@ -44,4 +43,18 @@
   margin-left:20px;
   border-radius:15px;
   margin-bottom:1.5%;
+}
+.kanban-task{
+  min-height:130px;
+  padding:1%;
+}
+.content{
+  display:flex;
+  flex-direction: column;
+}
+.Dates {
+  display:flex;
+  flex-direction:row;
+  justify-content:space-between;
+  width:100%;
 }
