--- a/src/composants/navbar/navbar.css
+++ b/src/composants/navbar/navbar.css
@@ -7,3 +7,7 @@
     justify-content:space-around;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
+
+#bouton{
+    background-color: rgba(134, 97, 193);
+}
