--- a/src/routes/landingpage/landingpage.css
+++ b/src/routes/landingpage/landingpage.css
@@ -1,14 +1,15 @@
 html{
-
+    
     background: linear-gradient(to bottom right, rgba(239, 188, 213), rgba(134, 97, 193), rgba(190, 151, 198));
-    width: 100vw;
+    max-width: 100vw;
     height: 100vw;
     
 }
 
 body{
-
+    overflow-x:hidden;
     font-family: 'Roboto', sans-serif;
+    max-width: 100vw;
 }
 
 .global img{
