--- a/src/routes/landingpage/landingpage.css
+++ b/src/routes/landingpage/landingpage.css
@@ -1,12 +1,10 @@
 html{
-    
-    background: linear-gradient(to bottom right, rgba(239, 188, 213), rgba(134, 97, 193), rgba(190, 151, 198));
     max-width: 100vw;
-    height: 100vw;
-    
+    height: 100vw;  
 }
 
 body{
+    background-color: rgba(250,250,250,255);  
     overflow-x:hidden;
     font-family: 'Roboto', sans-serif;
     max-width: 100vw;
@@ -27,13 +25,33 @@ body{
     justify-content:space-evenly
 }
 .gauche{
+    
     display:flex;
     flex-direction:column;
-    width:25vw;
+    width: 75vh;
+
+margin-top: 15vh;
+}
+h1{
+    font-family: system-ui;
+    font-weight: 400;
+}
+p{
+    font-family: Georgia, serif;
+}
+
+img{
+
+    margin-top: 15vh;
 }
 #bouton1{
 
     background-color: rgba(75, 82, 103);
     width: 10vw;
+ }
+
+ #bouton1:hover{
+
+    background-color: rgba(48, 102, 190);
  }
 
