meilleure liaison à la bdd

--- a/src/composants/modal/task/taskcrud.css
+++ b/src/composants/modal/task/taskcrud.css
@@ -14,7 +14,9 @@
   }
   .modal-form{
     display:flex;
-    width:80%;
+    width:90%;
+    height:adaptative;
+    padding:2%;
     flex-direction: column;
     justify-content:center;
   }
@@ -23,4 +25,8 @@
     margin-left:20px;
     border-radius:15px;
     margin-bottom:1.5%;
+  }
+  .buttonrow{
+    display:flex;flex-direction:row;align-items:center;justify-content:space-between;margin-top:1%;
+    
   }
