--- a/src/routes/landingpage/landingpage.css
+++ b/src/routes/landingpage/landingpage.css
@@ -22,15 +22,15 @@ body{
     width:100%;
     display:flex;
     flex-direction:row;
-    justify-content:space-evenly
+    justify-content:space-evenly;
+    align-items:flex-start;
+    padding:2%;
 }
 .gauche{
     
     display:flex;
     flex-direction:column;
     width: 75vh;
-
-margin-top: 15vh;
 }
 h1{
     font-family: system-ui;
@@ -41,8 +41,6 @@ p{
 }
 
 img{
-
-    margin-top: 15vh;
 }
 #bouton1{
 
