--- a/src/composants/modal/task/taskcrud.css
+++ b/src/composants/modal/task/taskcrud.css
@@ -1,24 +1,31 @@
 
 .modal-background{
     width:50%;
-    height:50%;
+    height:70%;
+    ;
     background-color:white;
-    
+    z-index:999;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     border-radius: 8px;
-    position:center;
-    position:fixed;
+    position: fixed; /* postulat de départ */
+  top: 50%; left: 50%; /* à 50%/50% du parent référent */
+  transform: translate(-50%, -50%); /* décalage de 50% de sa propre taille */
+
     padding:3%;
     display:flex;
     justify-content:center;
+    overflow-x:scroll;
   }
   .modal-form{
     display:flex;
-    width:90%;
+    width:100%;
+    height:150%;
     height:adaptative;
     padding:2%;
     flex-direction: column;
     justify-content:center;
+    z-input:999;
+    position:fixed;
   }
   .modal-form input, .modal-form select{
     margin-top:1%;
@@ -28,5 +35,5 @@
   }
   .buttonrow{
     display:flex;flex-direction:row;align-items:center;justify-content:space-between;margin-top:1%;
-    
+
   }
