--- a/src/composants/navbar/navbar.css
+++ b/src/composants/navbar/navbar.css
@@ -4,9 +4,12 @@
     display:flex;
     flex-direction:row;
     align-items:center;
-    padding-left: 92vw;
+    justify-content:flex-end;
+    padding:0 5%;
+    position:fixed;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     background: linear-gradient(rgba(248, 189, 127),rgba(245, 172, 114),rgba(242, 170, 126));
+    margin-bottom:130px;
 
     
    
