--- a/src/routes/landingpage/landingpage.css
+++ b/src/routes/landingpage/landingpage.css
@@ -9,14 +9,12 @@ body{
     font-family: 'Roboto', sans-serif;
     max-width: 100vw;
 }
-
+.global{
+    max-width:100vw;
+}
 .global img{
 
    width: 50vw; 
-}
-
-.global{
-    width: 100vw;
 }
 .hero{
     width:100%;
