--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,10 @@ body {
   width:100%;
   max-width:100vw;
 }
-
+.global{
+  max-width:100vw;
+  padding-top: 130px;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
