--- a/src/routes/landingpage/landingpage.css
+++ b/src/routes/landingpage/landingpage.css
@@ -1,21 +1,8 @@
-html{
-    max-width: 100vw;
-    height: 100vw;  
-}
 
-body{
-    background-color: rgba(250,250,250,255);  
-    overflow-x:hidden;
-    font-family: 'Roboto', sans-serif;
-    max-width: 100vw;
-}
-
-.global img{
-
-   width: 50vw; 
+.hero img{
+    max-width:50%;
 }
 .hero{
-    width:100%;
     display:flex;
     flex-direction:row;
     justify-content:space-evenly;
