--- a/src/routes/accueil/views/kanban.css
+++ b/src/routes/accueil/views/kanban.css
@@ -5,26 +5,69 @@ body{
 .dashboard{
   display:flex;
   flex-direction:column;
-  padding:1.5%;
+  padding:5%;
   justify-content:center;
   align-content:center;
 }
-
-
 
 .kanban-container{
   width:100%;
   display:flex;
   flex-direction:row;
   justify-content:space-between;
-  margin-top:2vh;
+  
 }
+
+.box{
+
+  width: 100%;
+}
+
+.flex{
+display: flex;
+
+}
+
+.img-add{
+ margin-left: 2%;
+ margin-right: 10%;
+ margin-top: 5%;
+ margin-bottom: 8%;
+ cursor: pointer;
+  
+}
+
 .kanban-column{
-  width:21%;
+  width:80%;
   background-color:grey;
   border-radius:15px;
-  padding: 1%;
+  padding: 2%;
 
+}
+.modal-background{
+  width:50%;
+  height:50%;
+  background-color:white;
+  
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 8px;
+  position:center;
+  position:fixed;
+  padding:3%;
+  display:flex;
+  justify-content:center;
+}
+.modal-form{
+  display:flex;
+  width:80%;
+  flex-direction: column;
+  justify-content:center;
+}
+.modal-form input, .modal-form select{
+  margin-top:1%;
+  margin-left:20px;
+  border-radius:15px;
+  margin-bottom:1.5%;
 }
 .kanban-task{
   min-height:130px;
