--- a/src/composants/modal/task/taskcrud.css
+++ b/src/composants/modal/task/taskcrud.css
@@ -1,8 +1,6 @@
 
 .modal-background{
     width:50%;
-    height:70%;
-    ;
     background-color:white;
     z-index:999;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
@@ -10,30 +8,37 @@
     position: fixed; /* postulat de départ */
   top: 50%; left: 50%; /* à 50%/50% du parent référent */
   transform: translate(-50%, -50%); /* décalage de 50% de sa propre taille */
-
-    padding:3%;
     display:flex;
     justify-content:center;
     overflow-x:scroll;
+    color: #19274E;
+    font-weight: 500;
+    font-family: 'Roboto','Segoe UI';
+    font-size: 18px;
   }
   .modal-form{
     display:flex;
     width:100%;
-    height:150%;
-    height:adaptative;
     padding:2%;
     flex-direction: column;
     justify-content:center;
     z-input:999;
     position:fixed;
+    padding:2%;
   }
+  
   .modal-form input, .modal-form select{
     margin-top:1%;
     margin-left:20px;
-    border-radius:15px;
     margin-bottom:1.5%;
+    height: 30px;
+    border: 2px solid #0C9EC0;
+    border-radius: 5px;
   }
   .buttonrow{
     display:flex;flex-direction:row;align-items:center;justify-content:space-between;margin-top:1%;
 
   }
+  
+
+
