--- a/src/composants/navbar/navbar.css
+++ b/src/composants/navbar/navbar.css
@@ -6,13 +6,22 @@
     justify-content:space-between;
     align-items:center;
     font-family: 'Roboto','Segoe UI';
+    margin-left:5%;
+    padding:0.5%;
+    position:fixed;
+    width:100vw;
+    background-color: solid white;
     
 }
+nav {
+    
 
+}
 .menu{
     width: 30%;
     display: flex;
     justify-content: space-between;
+    background-color:white;
 }
 
 .menu span{
