--- a/src/routes/landingpage/landingpage.css
+++ b/src/routes/landingpage/landingpage.css
@@ -1,25 +1,6 @@
-html{
-    max-width: 100vw;
-    scroll-behavior: smooth;
-    font-family: 'Roboto','Segoe UI';
-}
 
-body{
-    background-color: #F5FDFF;  
-    font-family: 'Roboto';
-    max-width: 100vw;
-}
 
-.global img{
-
-   width: 50vw; 
-}
-
-.global{
-    width: 100vw;
-}
 .hero{
-    width:100%;
     display:flex;
     flex-direction:row;
     justify-content:space-evenly;
@@ -43,8 +24,7 @@ p{
 
 
 .hero img{
-    width: 400px;
-    height: 500px;
+    width: 50vw; 
     object-fit: cover;
     border-radius: 10px;
     margin-top: 10vh;
@@ -194,8 +174,116 @@ footer li {
     background-color: white;
     display: flex;
     justify-content: space-between;
-    
+
+
 }
+.hero{
+    width:100%;
+    display:flex;
+    flex-direction:row;
+    justify-content:space-evenly;
+    align-items:flex-start;
+    padding:2%;
+}
+.hero img{
+    max-width:50%;
+}
+.gauche{
+    
+    display:flex;
+    flex-direction:column;
+    width: 75vh;
+
+margin-top: 15vh;
+}
+h1{
+    font-family: system-ui;
+    font-weight: 400;
+}
+p{
+    font-family: Georgia, serif;
+}
+
+
+.hero img{
+    width: 400px;
+    height: 500px;
+    object-fit: cover;
+    border-radius: 10px;
+    margin-top: 10vh;
+}
+h1{
+    font-weight: bold;
+    color: #0C9EC0;
+    line-height: 1.5;
+}
+h2{
+    font-weight: bold;
+    color: #0C9EC0;
+    line-height: 1.5;
+}
+p{
+    line-height: 1.5;
+    margin-top: 0;
+}
+
+.hero img{
+    width: 400px;
+    height: 500px;
+    object-fit: cover;
+    border-radius: 10px;
+    margin-top: 10vh;
+}
+#bouton1{
+    width: 10vw;
+    margin-top: 20px;
+    background-color: #F5FDFF;
+    border: 2px solid #0C9EC0;
+    border-radius: 5px;
+    font-weight: bold;
+    color: #0C9EC0;
+    height: 50px;
+    box-shadow: inherit;
+ }
+
+ #bouton1:hover{
+    cursor: pointer;
+    background-color: #0C9EC0;
+    border: 2px solid #F5FDFF;
+    color: #F5FDFF;
+ }
+
+ .main{
+    background-color: white ;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 90%;
+    height: 250px;
+    margin: 0 auto;
+ }
+
+ .main div{
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-around;
+ }
+ .main img{
+    width: 100px;
+    filter: grayscale(100%);
+    opacity: 0.6;
+ }
+
+ .foot{
+    padding: 50px 0;
+    text-align: center;
+    line-height: 1.5;
+ }
+
+    
+
+
 
 #white{
     width: 100%;
