--- a/src/composants/navbar/navbar.css
+++ b/src/composants/navbar/navbar.css
@@ -6,16 +6,23 @@
     justify-content:space-between;
     align-items:center;
     font-family: 'Roboto','Segoe UI';
-    padding:0.5%;
     position:fixed;
     width:100vw;
+    max-width:100vw;
     z-index:999;
-    margin-bottom:90px;
     background-color:  white;
     
 }
-nav {
-    
+.navcontent{
+    padding:1%;
+    width:90%;
+    display:flex;
+    flex-direction:row;
+    align-items:center;
+    justify-content:space-around;
+}
+.buttons button {
+    margin-right:1vw;
 
 }
 .menu{
