--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   width:100vw;
   max-width:100vw;
-  background-color: rgba(250,250,250,255); 
+  background-color: white; 
 }
 
 .global{
