--- a/src/composants/navbar/navbar.css
+++ b/src/composants/navbar/navbar.css
@@ -21,8 +21,10 @@
     align-items:center;
     justify-content:space-around;
 }
-.buttons button {
-    margin-right:1vw;
+.buttondiv  {
+    width:20vw;
+    display:flex;
+    justify-content:space-around;
 
 }
 .menu{
