--- a/src/composants/navbar/navbar.css
+++ b/src/composants/navbar/navbar.css
@@ -11,6 +11,7 @@
     max-width:100vw;
     z-index:999;
     background-color:  white;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     
 }
 .navcontent{
@@ -21,8 +22,10 @@
     align-items:center;
     justify-content:space-around;
 }
-.buttons button {
-    margin-right:1vw;
+.buttondiv  {
+    width:20vw;
+    display:flex;
+    justify-content:space-around;
 
 }
 .menu{
