--- a/src/composants/modal/task/taskcrud.css
+++ b/src/composants/modal/task/taskcrud.css
@@ -41,4 +41,9 @@
   }
   
 
-
+.modal-button{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
